# chat-gpt-api

novelist-sk/: README.md  base.py  chat.py  chroma.py  pyproject.toml
novelist-sk/chroma-persist/: chroma.sqlite3
novelist-sk/plugins/Novelist/ExtractIdea/: config.json
novelist-sk/plugins/Novelist/WriteNovel/: config.json  skprompt.txt
novelist-vanila/: README.md  main.py  pyproject.toml
novelist-vanila/ui/: package-lock.json  package.json
novelist-vanila/ui/src/: App.tsx
novelist-vanila/ui/src/Components/: InputBox.tsx  SelectBox.tsx
