[tool.poetry]
name = "novelist-sk"
version = "0.1.0"
description = ""
authors = ["Flzomb <spark3840@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
semantic-kernel = "0.9.0.beta1"
chromadb = "^0.4.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
