[tool.poetry]
name = "novelist-vanila"
version = "0.1.0"
description = ""
authors = ["Flzomb <spark3840@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
openai = "^1.14.3"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
